# sqids-bazel

./: BUILD.bazel  MODULE.bazel  README.md  defs.bzl  sqids.bzl  sqids_test.bzl
.github/workflows/: ci.yaml
e2e/: BUILD.bazel  MODULE.bazel
lib/: BUILD.bazel  sqids.bzl
lib/tests/: BUILD.bazel  alphabet.bzl  blocklist.bzl  encoding.bzl  min_length.bzl
