load("@aspect_rules_lint//format:defs.bzl", "multi_formatter_binary")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@buildifier_prebuilt//:rules.bzl", "buildifier")

buildifier(
    name = "buildifier.check",
    exclude_patterns = [
        "./.git/*",
    ],
    lint_mode = "warn",
    mode = "check",
)

multi_formatter_binary(
    name = "format",
    starlark = "@buildifier_prebuilt//:buildifier",
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//lib:sqids"],
)
