module(
    name = "sqids_bazel",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "aspect_bazel_lib", version = "1.39.0")
bazel_dep(name = "aspect_rules_lint", version = "0.6.0")
