load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
  name = "constants",
  srcs = ["constants.bzl"],
  visibility = [
    "//lib:__subpackages__",
    "//lib/tests:__subpackages__",
  ],
)

bzl_library(
    name = "sqids",
    srcs = ["sqids.bzl"],
    deps = [
      ":constants",
      "@aspect_bazel_lib//lib:strings",
    ],
    visibility = ["//:__pkg__"],
)
